upload the latest project

--- a/index.html
+++ b/index.html
@@ -94,39 +94,54 @@
         <h2 class="heading">My <span>Projects</span></h2>
         <div class="spans">
             <span class="active" data-li=".all">All</span>
-            <span data-li=".websites">Websites</span>
-            <span data-li=".small">Small Projects</span>
+            <span data-li=".front-end">Front-End</span>
+            <span data-li=".back-end">Back-End</span>
+            <span data-li=".full-stack">Full-Stack</span>
         </div>
         <div class="portfolio-container">
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end back-end full-stack">
+                <img src="imgs/full-version online-course.png" alt="full-version online-course">
+                <div class="portfolio-layer">
+                    <a href="/full-version.html" target="_blank"
+                        class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box all back-end full-stack">
+                <img src="imgs/online-eduction.png" alt="online-eduction">
+                <div class="portfolio-layer">
+                    <a href="/online-eduction.html" target="_blank"
+                        class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Leon.jpg" alt="">
                 <div class="portfolio-layer">
                     <a href="https://omarkhaled-code.github.io/TemplateOne-omar-code.github.io/" target="_blank"
                         class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Portfolio.png" alt="">
                 <div class="portfolio-layer">
                     <a href="https://omarkhaled-code.github.io/Portfolio/" target="_blank" class="link"><i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Second.png" alt="">
                 <div class="portfolio-layer">
                     <a href="https://omarkhaled-code.github.io/Template_TWO/" target="_blank" class="link"><i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Three.jpg" alt="">
                 <div class="portfolio-layer">
                     <a href="https://omarkhaled-code.github.io/Template_Three/main.html" target="_blank" class="link"><i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Five.png" alt="">
                 <div class="portfolio-layer">
 
@@ -135,7 +150,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Four.png" alt="">
                 <div class="portfolio-layer">
 
@@ -144,7 +159,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all websites">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Fitness.jpg" alt="">
                 <div class="portfolio-layer">
 
@@ -153,7 +168,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all back-end">
                 <img src="imgs/Quiz-App.png" alt="">
                 <div class="portfolio-layer">
                     <h1>Quiz App</h1>
@@ -162,7 +177,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Caclulator.png" alt="">
                 <div class="portfolio-layer">
                     <h1>Calculator</h1>
@@ -171,7 +186,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/To Do List.png" alt="">
                 <div class="portfolio-layer">
                     <h1>To-Do List</h1>
@@ -180,7 +195,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Slider Image.png" alt="">
                 <div class="portfolio-layer">
                     <h1>Slider Image</h1>
@@ -189,7 +204,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Fetch.png" alt="">
                 <div class="portfolio-layer">
                     <h1>API Fetch</h1>
@@ -198,7 +213,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all small">
+            <div class="portfolio-box all front-end">
                 <img src="imgs/local.png" alt="">
                 <div class="portfolio-layer">
                     <h1>Local Storage</h1>
