--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <div class="portfolio-box all front-end back-end full-stack">
                 <img src="imgs/full-version online-course.png" alt="full-version online-course">
                 <div class="portfolio-layer">
-                    <a href="full-version.html" target="_blank"
+                    <a href="./full-version.html" target="_blank"
                         class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="portfolio-box all back-end full-stack">
                 <img src="imgs/online-eduction.png" alt="online-eduction">
                 <div class="portfolio-layer">
-                    <a href="online-eduction.html" target="_blank"
+                    <a href="./online-eduction.html" target="_blank"
                         class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
