--- a/online-eduction.html
+++ b/online-eduction.html
@@ -25,9 +25,9 @@
         </div>
       </div>
       <nav class="navbar">
-        <a href="/index.html#home">Home</a>
+        <a href="portfolio_/index.html#home">Home</a>
         <a href="#gallery">Gallery</a>
-        <a href="/index.html#portfolio">Portfolio</a>
+        <a href="portfolio_/index.html#portfolio">Portfolio</a>
       </nav>
     </header>
     <section id="course">
