update the navbar icon

--- a/full-version.html
+++ b/full-version.html
@@ -26,6 +26,7 @@
       </div>
       <nav class="navbar">
         <a href="./index.html#home">Home</a>
+        <a href="#course" class="active">Video</a>
         <a href="#gallery">Gallery</a>
         <a href="./index.html#portfolio">Portfolio</a>
       </nav>
@@ -129,5 +130,6 @@
         <a href="#home"><i class="fa-sharp fa-solid fa-jet-fighter-up"></i></a>
       </div>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
