update some features

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="portfolio-box all front-end">
                 <img src="imgs/Portfolio.png" alt="">
                 <div class="portfolio-layer">
-                    <a href="https://omarkhaled-code.github.io/Portfolio/" target="_blank" class="link"><i
+                    <a href="https://omarkhaled-code.github.io/Exmple-Portfolio/" target="_blank" class="link"><i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -150,17 +150,17 @@
                 </div>
             </div>
 
-            <div class="portfolio-box all front-end">
-                <img src="imgs/Four.png" alt="">
+            <!-- <div class="portfolio-box all front-end">
+                <img src="imgs/Five.png" alt="">
                 <div class="portfolio-layer">
 
-                    <a href="https://omarkhaled-code.github.io/Template_Four/main.html" target="_blank" class="link">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </a>
+                    <a href="https://omarkhaled-code.github.io/example-portfolio/home.html" target="_blank" class="link"><i
+                            class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
+
             <div class="portfolio-box all front-end">
-                <img src="imgs/Fitness.jpg" alt="">
+                <img src="imgs/Four.png" alt="">
                 <div class="portfolio-layer">
 
                     <a href="https://omarkhaled-code.github.io/Template_Four/main.html" target="_blank" class="link">
