add social account

--- a/index.html
+++ b/index.html
@@ -38,15 +38,22 @@
             <h3>I'm a <span>Frontend Developer</span></h3>
             <p>My name is Omar and i'm a front-end developer. I enjoy creating user-friendly and visually appealing
                 websites. </p>
-            <!-- <div class="social-media">
-                <a href="#"><i class="bx bxl-facebook"></i></a>
-                <a href="#"><i class="bx bxl-instgram"></i></a>
-                <a href="#"><i class="bx bxl-youtube"></i></a>
-                <a href="#"><i class="bx bxl-linked-in"></i></a>
-                <a href="#"><i class="bx bxl-gitgub"></i></a>
-            </div> -->
-            <a href="CV.pdf" class="btn" download="CV">Downloud
-                CV</a>
+                <a href="CV.pdf" class="btn" download="CV">Downloud
+                    CV</a>
+                    <div class="social-media">
+                       <!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
+                       <a href="https://m.facebook.com/profile.php?id=100027627093929&name=xhp_nt__fb__action__open_user"target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                       </a>
+                       <a href="https://github.com/omarkhaled-code" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                       </a>
+                       <a href="https://www.linkedin.com/in/omar-khaled-8866b2254/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                       </a>
+                       
+
+                   </div> 
         </div>
         <div class="home-img">
             <img src="imgs/Visual data-pana.png" alt="">
@@ -95,18 +102,17 @@
         <div class="spans">
             <span class="active" data-li=".all">All</span>
             <span data-li=".front-end">Front-End</span>
-            <span data-li=".back-end">Back-End</span>
             <span data-li=".full-stack">Full-Stack</span>
         </div>
         <div class="portfolio-container">
-            <div class="portfolio-box all front-end back-end full-stack">
+            <div class="portfolio-box all front-end full-stack">
                 <img src="imgs/full-version online-course.png" alt="full-version online-course">
                 <div class="portfolio-layer">
                     <a href="./full-version.html" target="_blank"
                         class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="portfolio-box all back-end full-stack">
+            <div class="portfolio-box all full-stack">
                 <img src="imgs/online-eduction.png" alt="online-eduction">
                 <div class="portfolio-layer">
                     <a href="./online-eduction.html" target="_blank"
@@ -160,6 +166,15 @@
             </div> -->
 
             <div class="portfolio-box all front-end">
+                <img src="imgs/student.png" alt="students">
+                <div class="portfolio-layer">
+
+                    <a href="https://omarkhaled-code.github.io/example-portfolio/home.html" target="_blank" class="link"><i
+                            class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box all front-end">
                 <img src="imgs/Four.png" alt="">
                 <div class="portfolio-layer">
 
@@ -168,7 +183,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portfolio-box all back-end">
+            <div class="portfolio-box all full-stack">
                 <img src="imgs/Quiz-App.png" alt="">
                 <div class="portfolio-layer">
                     <h1>Quiz App</h1>
