add student project

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <img src="imgs/student.png" alt="students">
                 <div class="portfolio-layer">
 
-                    <a href="https://omarkhaled-code.github.io/example-portfolio/home.html" target="_blank" class="link"><i
+                    <a href="https://omarkhaled-code.github.io/Student/" target="_blank" class="link"><i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
